<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bgsingup"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


   <!--  <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0dp"
        android:valueTo="15dp"
        android:stepSize="1"
        android:contentDescription="Select weight range from 0 to 150"
        app:trackColor="@color/grey"
        app:thumbColor="@color/white"
        app:haloColor="@color/black"
         /> -->


    <ImageView
        android:layout_width="246dp"
        android:layout_height="112dp"
        android:src="@drawable/muscles"
        android:layout_marginTop="80dp">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:text="@string/edte1"
        android:textColor="@color/black"
        android:textSize="19sp"
         />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#D5BEB6"
        android:ems="12"
        android:hint="kg.."
        android:inputType="number"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/edte2"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="12"
        android:hint="in ft.."
        android:inputType="number"
        android:background="#D5BEB6"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/edte3"
        android:textColor="@color/black"

        android:textSize="19sp" />

    <EditText
        android:id="@+id/edt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#D5BEB6"
        android:ems="12"
        android:hint="in inch.."
        android:inputType="number"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey" />

 <androidx.appcompat.widget.AppCompatButton
     android:id="@+id/btn1"
     android:layout_width="115dp"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:background="#6A3A2C"
     android:padding="12dp"
     android:text="@string/btn1"
     android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt"
        android:textColor="#C39C91"
        android:textSize="20dp" />


</LinearLayout>
